# Triage

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  stegdb-sync.yml
docs/: ARCHITECTURE.md
tests/: __init__.py  test_admissibility.py  test_coherence.py  test_evaluator.py  test_scalar.py  test_sufficiency.py
triage/: __init__.py  canonical_updater.py  stegdb_adapter.py  stegdb_emitter.py
triage/core/: __init__.py  admissibility.py  coherence.py  commit_binding.py  evaluator.py  scalar.py  sufficiency.py
triage/domains/: __init__.py  embodied_ai.py  human_medical.py  robotics.py
triage/schemas/: sufficiency_registry.json
